# ml-dl-portfolio

./: .gitignore  README.md
conversational-banking-assistant/: .gitignore  README.md  pyproject.toml
conversational-banking-assistant/docs/: github-traceability.md  grounded-answering-design.md  initial-natwest-source-candidates.md  langchain-langgraph-boundaries.md  ollama-runtime.md  source-registry-design.md
conversational-banking-assistant/src/cba/: chunker.py  embeddings.py  extractor.py  models.py  source_registry.py  vector_index.py
conversational-banking-assistant/src/cba/answering/: __init__.py  evidence_support.py  grounded_answer.py  prompts.py  service.py
conversational-banking-assistant/src/cba/common/: hashing.py  paths.py
conversational-banking-assistant/src/cba/domain/: enums.py  models.py
conversational-banking-assistant/src/cba/ingestion/: chunker.py  extractor.py
conversational-banking-assistant/src/cba/llm/: client.py  (+3 more)
conversational-banking-assistant/tests/: conftest.py  test_chunker.py  test_embeddings.py  test_extractor.py  test_hybrid_retriever.py  test_metadata_filter.py  test_ollama_client.py  test_source_registry.py  test_vector_index.py
conversational-banking-assistant/tests/answering/: test_evidence_support.py  test_grounded_answer.py
conversational-banking-assistant/tests/ingestion/: test_chunker.py  test_extractor.py
conversational-banking-assistant/tests/llm/: test_llm_client.py  test_ollama_client.py  test_structured_output.py
conversational-banking-assistant/tests/retrieval/: test_embeddings.py  test_evidence_packet.py  test_hybrid_retriever.py  test_keyword_index.py  test_metadata_filter.py  test_vector_index.py
conversational-banking-assistant/tests/sources/: test_source_registry.py
ledgermind-local/backend/: .env.example  pyproject.toml
ledgermind-local/backend/src/: main.py
ledgermind-local/backend/tests/: test_analytics.py  test_category_approval.py  test_chat.py  test_database.py  test_fingerprint_edge_cases.py  test_imports.py  test_knowledge_base.py  test_main.py  test_overrides.py  test_planner_merchants.py  test_real_world_formats.py  test_semantic_search.py  test_semantic_top_merchants.py
pneumonia-detection-resnet/: .gitignore  README.md  pneumonia-detection-using-resnet.ipynb  pyproject.toml  requirements.txt
pneumonia-detection-resnet/src/rsna_pneumonia/: cli.py  data_loader.py  model.py  predict.py  trainer.py
pneumonia-detection-resnet/tests/: test_model.py
(+122 files in other folders)
