[project]
name = "conversational-banking-assistant"
version = "0.1.0"
description = "Conversational Banking Assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
