[project]
name = "conversational-banking-assistant"
version = "0.1.0"
description = "Conversational Banking Assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=7.0.0",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["cba"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
