[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
    "chromadb>=0.6.3",
    "pytest-asyncio>=0.25.3",
]
